# autotract_firmware

./: .clang-format  .gitignore  CMakeLists.txt
inc/: STM32Hardware.h  app.h  encoder.h  errors.h  hardware.h  init.h  main.h  rosserial.h  steering.h  stepper.h  stm32f4xx_hal_conf.h
libs/ros/ros/: node_handle.h
libs/stm32cube/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_tim.c
src/: app.cpp  encoder.cpp  errors.cpp  hardware.cpp  init.cpp  interrupts.cpp  main.cpp  rosserial.cpp  steering.cpp  stepper.cpp
